--- a/tomato contracts/uto8-contracts/package.json
+++ b/tomato contracts/uto8-contracts/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@chainlink/contracts": "^0.4.0",
     "@openzeppelin/contracts": "^4.5.0",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "base64-sol": "^1.0.1",
     "dotenv": "^16.0.0",
     "ethereumjs-tx": "^2.1.2"
